@@ -1,8 +1,15 @@
+2010-01-18 Borut Razem <borut.razem AT siol.net>
+
+	* src/SDCCmain.c, sdas/linksrc/lkmain.c, sdas/linksrc/aslink.h:
+	  fixed bug #2933892 - Weird default ouput location for linker - regression
+
 2010-01-18 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/SDCCast.c:
 	  Taking the address of _Bool works on the z80 and gbz80 ports.
 
 2010-01-17 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/SDCCcse.c,
 	  src/SDCCicode.c,
 	  src/SDCCglue.c,
